force-app/main/default/objects/test__c/test__c.object-meta.xml
<CustomObject>
    <label>test</label>
    <nameField>
        <displayFormat>aｂ-{000000}</displayFormat>
        <label>番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>