force-app/main/default/objects/test__c/fields/currency1__c.field-meta.xml
<CustomField>
    <fullName>currency1__c</fullName>
    <label>currency1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>