force-app/main/default/objects/test__c/fields/currency2__c.field-meta.xml
<CustomField>
    <fullName>currency2__c</fullName>
    <label>currency2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>