force-app/main/default/objects/test__c/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>test</relationshipLabel>
    <relationshipName>test</relationshipName>
    <type>Lookup</type>
</CustomField>