force-app/main/default/objects/test__c/fields/SumCurrency__c.field-meta.xml
<CustomField>
    <fullName>SumCurrency__c</fullName>
    <formula>currency1__c  +  currency2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SumCurrency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>