force-app/main/default/objects/test__c/fields/test__c.field-meta.xml
<CustomField>
    <fullName>test__c</fullName>
    <label>test</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>test</valueSetName>
    </valueSet>
</CustomField>