force-app/main/default/objects/test__c/validationRules/testes.validationRule-meta.xml
<ValidationRule>
    <fullName>testes</fullName>
    <active>true</active>
    <errorConditionFormula>currency1__c &gt;0</errorConditionFormula>
    <errorDisplayField>currency1__c</errorDisplayField>
    <errorMessage>testes</errorMessage>
</ValidationRule>