force-app/main/default/objects/test__c/listViews/test_test.listView-meta.xml
<ListView>
    <fullName>test_test</fullName>
    <filterScope>Queue</filterScope>
    <label>test</label>
    <queue>test</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>